# red_orango_engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml  ci.yaml
roe_app/: Cargo.toml  README.md
roe_app/examples/: example_application.rs
roe_app/src/: application.rs  application_impl.rs  application_state.rs  event_handler.rs  lib.rs
roe_app/src/application/: application.rs
roe_app/src/event/: controller.rs  event.rs  event_handler.rs  event_loop_any_thread.rs  keyboard.rs  mod.rs  mouse.rs  touch.rs
roe_app/src/monitor/: mod.rs
roe_app/src/window/: mod.rs
roe_asset_manager/: Cargo.toml
roe_asset_manager/src/: asset_loader.rs  asset_manager.rs  audio.rs  audio_buffer.rs  font.rs  lib.rs  texture.rs  texture_loader.rs  texture_manager.rs
roe_assets/: Cargo.toml  README.md
roe_assets/src/: asset_loader.rs  asset_manager.rs  audio_cache.rs  font_cache.rs  lib.rs  texture_cache.rs
roe_audio/: Cargo.toml  LICENSE  README.md  build.rs
roe_audio/data/audio/: not-an-audio-file.txt
roe_audio/src/: alto_lib.rs  audio_error.rs  audio_format.rs  buffer.rs  context.rs  decoder.rs  decoder_error.rs  device.rs  error.rs  format.rs  instance.rs  lib.rs  mixer.rs  ogg_decoder.rs  sound.rs  source.rs  static_source.rs  streaming_source.rs  wav_decoder.rs
roe_audio/src/new_impl/: alto_lib.rs  audio_error.rs  buffer.rs  context.rs  decoder.rs  device.rs  error.rs  mod.rs  ogg_decoder.rs  ogg_decoder_bkp.rs  ogg_decoder_bkp2.rs  sound_data.rs  static_source.rs  wav_decoder.rs
roe_examples/: Cargo.toml  README.md
roe_examples/examples/: app_state.rs  events.rs  gioconda.rs  offscreen_rendering.rs  sound_player.rs  text_rendering.rs  triangles.rs
roe_examples/src/: example_app.rs  lib.rs
roe_gfx/: Cargo.toml  README.md  build.rs
roe_gfx/examples/: gioconda.rs  offscreen_rendering.rs  triangles.rs
roe_gfx/src/: lib.rs
roe_gfx/src/core/: canvas.rs  canvas_texture.rs  canvas_window.rs  command_sequence.rs  mesh.rs
roe_gfx/src/shape2/: shape2_renderer.rs
roe_gfx/src/sprite/: sprite_renderer.rs
roe_graphics/: Cargo.toml  README.md
roe_graphics/src/: canvas.rs  canvas_texture.rs  canvas_window.rs  color.rs  command_sequence.rs  instance.rs  lib.rs  main_structures.rs  mesh.rs  size.rs  texture_bind_group.rs  utility.rs
roe_math/: Cargo.toml  LICENSE  README.md
roe_math/src/: conversion.rs  geometry2.rs  geometry3.rs  lib.rs  transform.rs
roe_math/src/bkp/conversion/: to_homogeneous3.rs
roe_math/src/bkp/geometry3/: mod.rs
roe_math/src/conversion/: mod.rs  to_homogeneous3.rs
roe_math/src/geometry2/: mod.rs  orthographic.rs
roe_math/src/matrix/: mod.rs
roe_os/: Cargo.toml
roe_os/src/: event_loop_any_thread.rs  lib.rs
roe_resource_manager/: Cargo.toml
roe_resource_manager/src/: lib.rs  resource_loader.rs  texture_loader.rs  texture_manager.rs
roe_shader/: Cargo.toml  README.md
roe_shader/examples/: shader_compilation.rs
roe_shader/examples/glsl/: shader.vert
roe_shader/src/: lib.rs  spirv.rs
roe_shape/: Cargo.toml
roe_shape/src/: lib.rs
roe_shape2/: Cargo.toml  README.md
roe_shape2/src/: lib.rs  shape2_renderer.rs
roe_shape2/src/shaders/glsl/: shape2.vert
roe_sprite/: Cargo.toml  README.md  build.rs
roe_sprite/src/: lib.rs  sprite_renderer.rs
roe_sprite/src/shaders/glsl/: sprite.frag  sprite.vert
roe_text/: Cargo.toml  README.md  build.rs
roe_text/examples/: text_rendering.rs
roe_text/src/: font.rs  lib.rs  text_renderer.rs
roe_text/src/shaders/glsl/: text.frag  text.vert
vorbis/: Cargo.toml
vorbis/src/: lib.rs
