[package]
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2021"
name = "roe_examples"
version = "0.1.1"

[dependencies]
image = {version = "0.23.*"}
num = {version = "0.4.*"}
rand = "0.8.*"
roe_os = {path = "../roe_os"}
roe_app = {path = "../roe_app"}
roe_audio = {path = "../roe_audio"}
roe_graphics = {path = "../roe_graphics"}
roe_math = {path = "../roe_math", features = [
  "serde-serialize",
]}
roe_shape = {path = "../roe_shape"}
roe_sprite = {path = "../roe_sprite"}
roe_text = {path = "../roe_text"}

[[example]]
name = "app_state"
path = "examples/app_state.rs"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "triangles"
path = "examples/triangles.rs"

[[example]]
name = "gioconda"
path = "examples/gioconda.rs"

[[example]]
name = "offscreen_rendering"
path = "examples/offscreen_rendering.rs"
 
[[example]]
name = "text_rendering"
path = "examples/text_rendering.rs"

[[example]]
name = "sound_player"
path = "examples/sound_player.rs"
