[package]
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2021"
name = "roe_graphics"
version = "0.1.0"

[dependencies]
as-slice = {version = "0.2.*"}
bitflags = {version = "1.3.*"}
bytemuck = {version = "1.7.*"}
futures = {version = "0.3.*"}
image = {version = "0.23.*"}
num = {version = "0.4.*"}
num-traits = {version = "0.2.*"}
raw-window-handle = {version = "0.3.*"}
roe_app = {path = "../roe_app"}
roe_math = {path = "../roe_math", features = [
  "serde-serialize",
]}
serde = {version = "1.0.*", features = ["derive"]}
wgpu = {version = "0.7.*", features = ["trace", "replay"]}

[dev-dependencies]
galvanic-assert = "0.8.*"
serial_test = "0.5.*"