[package]
name = "roe_math"
version = "0.1.1"
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2021"

[features]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = "0.29.*"
rand = "0.8.*"
serde = { version = "1.0.*", features = ["derive"], optional = true }

[dev-dependencies]
galvanic-assert = "0.8.*"
