[package]
authors = ["Davide Corradi <davide.corradi.dev@gmail.com>"]
edition = "2018"
name = "roe_text"
version = "0.1.0"

[dependencies]
bytemuck = {version = "1.7.*"}
freetype-rs = {version = "0.28.*"}
harfbuzz_rs = {version = "2.0.*"}
num-traits = {version = "0.2.*"}
raw-window-handle = {version = "0.3.*"}
roe_math = {path = "../roe_math", features = [
  "serde-serialize",
]}
roe_graphics = {path = "../roe_graphics"}
serde = {version = "1.0.*", features = ["derive"]}

[dev-dependencies]
galvanic-assert = "0.8"
roe_app = {path = "../roe_app"}

[build-dependencies]
roe_shader = {path = "../roe_shader"}
